2.10.0:
  - Support Remote Test
  - Add Spaces to Sections in Downgraded yaml
  - Remove Properties in 1.5 to 1.4.
2.9.12: RND-1036 add wagon type to plugin upload command
2.9.11: Yank fixes.
2.9.10: RND-921 add v2 flag to downgrade and create_v2_plugin_yaml
2.9.9:
  - Docker security issues on Windows.
  - Improve executions_start cloudify API for docker.
  - Improve logging.
2.9.8: Change download location of big file.
2.9.7: Fix bug in setup_root_bash
2.9.6: Handle intrinsic fns in plugin yaml.
2.9.5: Fix issue in upload assets.
2.9.4: Fix issue in upload assets.
2.9.3: Fix issue in upload assets.
2.9.2: Improvement in pypi release command to handle name based on env var.
2.9.1: Fix bug in swap.
2.9.0:
  - Fix bug in get_version_py.
  - RND-268 Add Yank Command for reverting releases.
  - Verify that upload to pypi successful.
  - Support Python Version Parameter in plugin swap command.
  - Downgrade Plugin YAML
2.8.49: Stop logging executions with no errors.
2.8.48: Fix bug in plugin version validation.
2.8.47:
  - Update GA release to 7.0.0.
  - Throws an error if The version in plugin.yaml is greater than __verison__.py.
2.8.46: Throws an error if The version in plugin.yaml is greater than __verison__.py.
2.8.45: Fix issue in PR management.
2.8.44: automatically update changelog.txt when version.py is updated only in *-build branch
2.8.43:
  - Recursive cfy-lint auto fix and open PR.
  - Auto-update changelog.
2.8.42: Exit Plugins JSON job if not a plugin.
2.8.41: update version in plugin*.yaml from __version__.py'.
2.8.40: Improve Logging.
2.8.39: Bump version.
2.8.38: More cleanup of version string.
2.8.37: Strip whitespace from version string.
2.8.36: Update version string regex.
2.8.35: Search for __version__py instead of setuppy
2.8.34: Fix Bug in PR recognition.
2.8.33: Fix bug in pulls validations.
2.8.32: Get branch and repo
2.8.31: Fix bug in get branch.
2.8.30: Fix validate PR-branch.